# test

./: README.md  build.py  noxfile.py  pyproject.toml
.github/workflows/: build.yaml  codeql.yaml  cov.yaml  lint.yaml  test.yaml
src/hades/: __init__.py
src/hades_extensions/: .clang-format-ignore  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/hades_extensions/include/: hash_combine.hpp  macros.hpp
src/hades_extensions/include/game_objects/: registry.hpp  steering.hpp
src/hades_extensions/include/generation/: primitives.hpp
src/hades_extensions/src/: CMakeLists.txt  binding.cpp
src/hades_extensions/src/game_objects/: registry.cpp
src/hades_extensions/src/generation/: astar.cpp
src/hades_extensions/test/: CMakeLists.txt
src/hades_extensions/test/game_objects/systems/: test_movements.cpp
src/hades_extensions/tests/: CMakeLists.txt
src/hades_extensions/tests/game_objects/: test_registry.cpp  test_steering.cpp
src/hades_extensions/tests/game_objects/systems/: test_attacks.cpp  test_effects.cpp  test_inventory.cpp  test_movements.cpp  test_upgrade.cpp
src/hades_extensions/tests/generation/: test_astar.cpp  test_map.cpp  test_primitives.cpp
test/game_objects/: test_registry.cpp  test_steering.cpp
test/generation/: test_map.cpp
